--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,20 +122,36 @@
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-html,
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+*::selection {
+  background-color: #FFF;
+  color: #000;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
 body {
   max-width: var(--max-width);
   width: 100%;
   margin: 0 auto;
   overflow-x: hidden;
-}
-
-body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
