--- a/components/layout/logo.module.css
+++ b/components/layout/logo.module.css
@@ -1,11 +1,12 @@
 .logo {
-  text-transform: uppercase;
-  font-size: 1.6rem;
+  text-transform: capitalize;
+  font-size: 1.3rem;
   font-weight: 600;
+  letter-spacing: 1px;
 }
 
 @media (min-width: 768px) {
   .logo {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
 }
