--- a/components/posts/all-post-item.module.css
+++ b/components/posts/all-post-item.module.css
@@ -1,36 +1,40 @@
-.container {
-  position: relative;
-  height: 500px;
+.li {
+  max-width: 33.333333%;
 }
 
 .imagewrapper {
-  width: 100%;
-  height: 100%;
+  height: 200px;
+  margin-bottom: 1rem;
 }
 
-.container img {
+.li img {
+  width: 100%;
   height: 100% !important;
   object-fit: cover;
 }
 
-.content {
-  position: absolute;
-  bottom: 8px;
-  left: 16px;
+.container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 2.5rem;
-  background-color: rgba(0, 0, 0, 0.6);
+  gap: 1.5rem;
 }
 
-.content .span {
-  font-weight: 600;
-  font-size: 1.3rem;
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .content h3 {
-  font-size: 3.2rem;
+  font-size: 2.4rem;
+}
+
+.content p {
+  line-height: 1.5;
+}
+
+.span {
+  font-size: 1.3rem;
   font-weight: 500;
 }
 
